fixed carousel overlapping features, lindenhofpark app link, isymbols link, notely link, recude width in app preview to 1014px

--- a/src/components/Apps/AppPreview/PhotoCarousel/view/PhotoCarousel.css
+++ b/src/components/Apps/AppPreview/PhotoCarousel/view/PhotoCarousel.css
@@ -16,8 +16,7 @@
 
 @media (min-width: 768px) {
   .carouselContainer {
-    max-width: 80%;
-    max-height: 600px;
+    max-width: 950px;
     margin: 0 auto;
   }
 }
